// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render LetterGridItem disabled correctly 1`] = `
<button
  className="button button--letter"
  disabled={true}
>
  z
</button>
`;

exports[`should render LetterGridItem not disabled correctly 1`] = `
<button
  className="button button--letter"
  disabled={false}
>
  a
</button>
`;
